@@ -116,8 +116,10 @@ ImageBuffer::ImageBuffer(const IntSize& size, ColorSpace, RenderingMode renderin
 
 ImageBuffer::~ImageBuffer()
 {
-    // This is so that the SkGpuDevice destructor has the correct context.
-    m_context->platformContext()->makeGrContextCurrent();
+    if (m_context && m_context->platformContext()) {
+        // This is so that the SkGpuDevice destructor has the correct context.
+        m_context->platformContext()->makeGrContextCurrent();
+    }
 }
 
 GraphicsContext* ImageBuffer::context() const
