@@ -1,3 +1,13 @@
+2011-09-12  Jeff Timanus  <twiz@chromium.org>
+
+        [chromium]  Prevent a crash when tearing down an ImageBuffer that was not successfully initialized.
+        https://bugs.webkit.org/show_bug.cgi?id=67944
+
+        Reviewed by Stephen White.
+        
+        * platform/graphics/skia/ImageBufferSkia.cpp:
+        (WebCore::ImageBuffer::~ImageBuffer):
+
 2011-09-12  Michael Saboff  <msaboff@apple.com>
 
         Update RegExp and related classes to use 8 bit strings when available
